--- a/Hosting/ND.MCJ.WebApi/Areas/Help/Views/Dev/Docs.cshtml
+++ b/Hosting/ND.MCJ.WebApi/Areas/Help/Views/Dev/Docs.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>接口文档</title>
-    @Styles.Render("~/Content/style/")
+    @Styles.Render("~/bundles/style/")
     @Scripts.Render("~/bundles/script")
 </head>
 <body>
